GNOME Bugzilla – Bug 653332
Missing conversion from DBus 16 bit integers to JS
Last modified: 2011-06-24 14:29:45 UTC
Patch attached.
Created attachment 190580 [details] [review] dbus: Add conversion rule for 'q' to JS The int16/uint16 type (signature: 'q') is lacking the conversion rule from DBus value to JavaScript. Easy enough to add.
Review of attachment 190580 [details] [review]: Looks good.
Thanks for the quick review. :-) Attachment 190580 [details] pushed as 929d910 - dbus: Add conversion rule for 'q' to JS