dbus: Add conversion rule for 'q' to JS

The int16/uint16 type (signature: 'q') is lacking the conversion rule
from DBus value to JavaScript. Easy enough to add.

https://bugzilla.gnome.org/show_bug.cgi?id=653332